--- a/src/main/resources/templates/userLogin.html
+++ b/src/main/resources/templates/userLogin.html
@@ -41,7 +41,7 @@
             display: block;
             font-weight: bold;
         }
-        .form-container div{
+        .form-container .error{
             font-style: italic;
             margin-bottom: 10px;
             color: red;
@@ -79,7 +79,7 @@
         <h2>Your Details</h2>
         <form th:action="@{/authenticateUser}" method="POST">
 
-            <div th:if="${param.error}">
+            <div class="error" th:if="${param.error}">
                 Sorry! You entered invalid username/password
             </div>
 
@@ -87,11 +87,11 @@
                 You are logged out! Login again
             </div>
 
-            <label for="email">Usernme</label>
+            <label for="email">Username</label>
             <input type="text" id="email" name="username" required />
 
             <label for="password">Password</label>
-            <input id="password"  name="password" required />
+            <input id="password"  type="password" name="password" required />
 
             <input class="submit-button" type="submit" value="Login" />
 
