--- a/src/main/resources/templates/editPost.html
+++ b/src/main/resources/templates/editPost.html
@@ -44,7 +44,7 @@
 
 
     <label for="tags">Tags</label><br>
-    <input id="tags" type="text"  name="tagStr" th:object="${tagString}" th:value="${tagString}" />
+    <input id="tags" type="text"  name="tagString" th:object="${tagString}" th:value="${tagString}" />
 
     <input type="submit" value="Submit">
 
